[gd_scene load_steps=7 format=3 uid="uid://dkjlgchisi4fg"]

[ext_resource type="Texture2D" uid="uid://b82wo2yylqwgx" path="res://Textures/Player/player_sprite.png" id="1_eljkx"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_ikb7l"]
[ext_resource type="PackedScene" uid="uid://bhaq6gq1dfvdg" path="res://Utitlity/hurt_box.tscn" id="3_4ld13"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uo68k"]
radius = 4.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpndu"]
size = Vector2(11, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_hgov0"]
radius = 370.001

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_ikb7l")

[node name="PlayerSprite" type="Sprite2D" parent="." groups=["player"]]
texture = ExtResource("1_eljkx")
hframes = 2
frame = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_uo68k")

[node name="WalkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_4ld13")]
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_tpndu")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_hgov0")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="HurtBox"]
